[package]
name = "revm-scroll"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# revm
revm = { git = "https://github.com/scroll-tech/revm", branch = "scroll", default-features = false, features = ["enable_eip7702", "enable_eip7623"] }
revm-primitives = { git = "https://github.com/scroll-tech/revm", branch = "scroll", default-features = false }
revm-inspector = { git = "https://github.com/scroll-tech/revm", branch = "scroll", default-features = false }

# misc
auto_impl = "1.2.0"
enumn = { version = "0.1" }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }

[features]
default = ["std", "c-kzg", "secp256k1", "portable", "blst"]
std = ["serde?/std", "revm/std"]
hashbrown = ["revm/hashbrown"]
serde = ["dep:serde", "revm/serde"]
portable = ["revm/portable"]

test-utils = []

# See comments in `revm-precompile`
secp256k1 = ["revm/secp256k1"]
c-kzg = ["revm/c-kzg"]
# `kzg-rs` is not audited but useful for `no_std` environment, use it with causing and default to `c-kzg` if possible.
kzg-rs = ["revm/kzg-rs"]
blst = ["revm/blst"]
